[gd_scene load_steps=2 format=2]

[ext_resource path="res://Objects/HurtBox.gd" type="Script" id=1]

[node name="Hurtbox" type="Area2D"]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[connection signal="invinciEnd" from="." to="." method="_on_Hurtbox_invinciEnd"]
[connection signal="invinciStart" from="." to="." method="_on_Hurtbox_invinciStart"]
